  * [DEV] Correction du problème de USER vide au moment du useradd dans
    docker-install.sh
  * [DEV] Correction sur la valeur de USER_LOGIN pour l'install de
    docker
  * [DEV] Changement de stratégie pour obtenir user/group dans
    l'installeur de docker
  * [DEV] Correction d'un bug sur un test de comparaison de chaîne
  * [DEV] Correction de la prise en charge de la conf pour docker pour
    les versions d'Ubuntu > 14.10
  * [DEV] Ajout d'informations sur le proxy courant + ajout d'aide en
    cas d'option incorrecte
  * [DEV] Correction du problème de changement de propriétaires de /env
    et /conf
  * [DEV] Corrections bugs/manques multiples, problèmes de droits sur
    des fichiers de conf, installation de docker qui posait problème
    sous Ubuntu 16.04
  * [DEV] Commit -- 11/01/2017 @ 14:56:49
  * [DEV] Correction de bugs (lock à l'installation, affichage, proxy,
    .curlrc, etc...) / merge d'un PULL REQUEST / gitconfig : credentials
    = 8h / fonction de vérification et d'installation des dépendances
    d'inist-tools / warning ntpdate manquant si ntp sync échoue
  * [DEV] WIP gource
  * [DEV] WIP gource
  * [DEV] Gource WiP
  * [DEV] Intégration de gource
  * [DEV] Correction d'un test en fin de génération du gource
  * [DEV] Documentation
  * [DEV] Correction bug de prise en compte de --proxy=adsl, correction
    de bug dans un message, correction bug 'inist dekstop',
    documentation INIST_SERVICES
  * [DEV] Documentation des variables d'environnement pour la commande
    gource
  * [DEV] Documentation de la configuration du répertoire des avatars
    pour Gource
  * [DEV] Commit -- 22/02/2017 @ 14:02:31
  * [DEV] Gource multi-dépôt
  * [DEV] Gource multi-url : fusion des logs -> une seule vidéo
  * [DEV] Correction du bug de fusion des logs pour Gource
  * [DEV] Augmentation du bitrate pour une meilleure qualité du webm de
    Gource

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200