@@ -11,19 +11,22 @@
 #
 ################################################################################
 
+source "/opt/inist-tools/libs/std.rc"
+source "/opt/inist-tools/libs/ansicolors.rc"
+
 # ------------------------------------------------------------------------------
 # Variables globales
 # ------------------------------------------------------------------------------
 APT_PROXIES_FILE="/etc/apt/apt.conf.d/95proxies"
 
 # PROXY
-INIST_HTTP_PROXY="http://proxyout.inist.fr:8080"
-INIST_HTTPS_PROXY="https://proxyout.inist.fr:8080"
-INIST_FTP_PROXY="http://proxyout.inist.fr:8080"
-INIST_PROXYPAC="http://proxypac.intra.inist.fr/proxy.pac"
-INIST_NO_PROXY="localhost,127.0.0.0/8,*.local,172.16.0.0/16"
-INIST_PROXY_ADDRESS="http://proxyout.inist.fr"
-INIST_PROXY_PORT="8080"
+#INIST_HTTP_PROXY="http://proxyout.inist.fr:8080"
+#INIST_HTTPS_PROXY="https://proxyout.inist.fr:8080"
+#INIST_FTP_PROXY="http://proxyout.inist.fr:8080"
+#INIST_PROXYPAC="http://proxypac.intra.inist.fr/proxy.pac"
+#INIST_NO_PROXY="localhost,127.0.0.0/8,*.local,172.16.0.0/16"
+#INIST_PROXY_ADDRESS="http://proxyout.inist.fr"
+#INIST_PROXY_PORT="8080"
 
 # ------------------------------------------------------------------------------
 # 
