@@ -23,13 +23,13 @@ INIST_TOOLS_CONF_FILE="$INIST_TOOLS_CONF_DIR/inist-tools.conf"
 DOCKEROPTS_CONF_FILE="/opt/inist-tools/conf/docker-opts.conf"
 
 # PROXY
-INIST_HTTP_PROXY="http://proxyout.inist.fr:8080"
-INIST_HTTPS_PROXY="http://proxyout.inist.fr:8080"
-INIST_FTP_PROXY="http://proxyout.inist.fr:8080"
-INIST_PROXYPAC="http://proxypac.intra.inist.fr/proxy.pac"
-INIST_NO_PROXY="localhost,127.0.0.0/8,*.local,172.16.0.0/16"
-INIST_PROXY_ADDRESS="http://proxyout.inist.fr"
-INIST_PROXY_PORT="8080"
+#INIST_HTTP_PROXY="http://proxyout.inist.fr:8080"
+#INIST_HTTPS_PROXY="http://proxyout.inist.fr:8080"
+#INIST_FTP_PROXY="http://proxyout.inist.fr:8080"
+#INIST_PROXYPAC="http://proxypac.intra.inist.fr/proxy.pac"
+#INIST_NO_PROXY="localhost,127.0.0.0/8,*.local,172.16.0.0/16"
+#INIST_PROXY_ADDRESS="http://proxyout.inist.fr"
+#INIST_PROXY_PORT="8080"
 
 # ------------------------------------------------------------------------------
 # BACKUP !
